--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.cloud.config.label=master
 spring.cloud.config.server.git.username=
 spring.cloud.config.server.git.password=
 
+management.endpoints.web.exposure.include="*"
 eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka/
 
